# tct-its

./: .travis.yml  README.md  cabal.project  stack.dev.yaml  stack.yaml  tct-its.cabal
paicc/: Main.hs
src/Tct/: #Its.hs#  Its.hs
src/Tct/Its/: Config.hs  Data.hs  Main.hs  Processor.hs  Processors.hs  Strategies.hs  Strategy.hs
src/Tct/Its/Data/: Bounds.hs  Complexity.hs  Cost.hs  Graph.hs  LocalSizebounds.hs  Problem.hs  ResultVariableGraph.hs  Rule.hs  SMT.hs  Selector.hs  Sizebounds.hs  Smt.hs  Timebounds.hs  TransitionGraph.hs  Types.hs
src/Tct/Its/Processor/: Chaining.hs  Empty.hs  KnowledgePropagation.hs  Lare.hs  Looptree.hs  PathAnalysis.hs  PolyRank.hs  Simplification.hs  Sizebounds.hs  TransitionPredicateAbstraction.hs
tct-its/: Main.hs
