Name:               tct-its
Version:            3.0.0
Author:
  Michael Schaper <michael.schaper@uibk.ac.at>,
Maintainer:
  Michael Schaper <michael.schaper@uibk.ac.at>,
Category: Program Analysis
Stability: Experimental
License: BSD3
License-file: LICENSE
Homepage: http://cl-informatik.uibk.ac.at/software/tct/
Synopsis: A Complexity Analyser for Integer Transition Systems
Description:
  The Tyrolean Complexity Tool (TcT for short) is a tool for proving 
  resource bounds for different formal systems. This package provides 
  techniques to analyse runtime- and sizebounds for integer transtions 
  systems (ITS).

Cabal-version: >= 1.8
Build-type: Simple

Executable its
  main-is: 
    Tct/Its/Main.hs
  hs-source-dirs:
    src
  build-depends:
    containers       >= 0.5 && < 0.6,
    mtl              >= 2.1 && < 2.3,
    base             == 4.*,
    fgl              == 5.5.*,
    fgl-visualize    == 0.1.0.*,
    parsec           == 3.1.*,

    slogic           == 0.*,
    tct-common       == 3.*,
    tct-core         == 3.*,
    tct-its          == 3.*

  extensions: 
    ConstraintKinds,
    DataKinds,
    DeriveDataTypeable,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses, 
    TypeFamilies,
    TypeOperators,
    OverlappingInstances

  ghc-options:
    -j -Wall -threaded -fforce-recomp -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N

Library
  hs-source-dirs:
    src
  exposed-modules:
    Tct.Its
    Tct.Its.Data
    Tct.Its.Data.Bounds
    Tct.Its.Data.Complexity
    Tct.Its.Data.LocalSizebounds
    Tct.Its.Data.Problem
    Tct.Its.Data.ResultVariableGraph
    Tct.Its.Data.Rule
    Tct.Its.Data.Selector
    Tct.Its.Data.Sizebounds
    Tct.Its.Data.Timebounds
    Tct.Its.Data.TransitionAbstraction
    Tct.Its.Data.TransitionGraph
    Tct.Its.Data.Types
    Tct.Its.Processor
    Tct.Its.Processor.Chaining
    Tct.Its.Processor.Empty
    Tct.Its.Processor.PathAnalysis
    Tct.Its.Processor.TransitionPredicateAbstraction
    Tct.Its.Processor.PolyRank
    Tct.Its.Processor.Simplification
    Tct.Its.Processor.Sizebounds
  build-depends:
    containers       >= 0.5 && < 0.6,
    mtl              >= 2.1 && < 2.3,
    base             == 4.*,
    fgl              == 5.5.*,
    fgl-visualize    == 0.1.0.*,
    parsec           == 3.1.*,

    slogic           == 0.*,
    tct-common       == 3.*,
    tct-core         == 3.*
    
  ghc-options:
    -j -Wall -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
  extensions: 
    ConstraintKinds,
    DataKinds,
    DeriveDataTypeable,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses, 
    TypeFamilies,
    TypeOperators,
    OverlappingInstances

